# attest

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  measure.rs  prove.rs  verify.rs
crates/measure/: Cargo.toml
crates/measure/src/: azure.rs  ccel.rs  event.rs  lib.rs  platform.rs  uki.rs
crates/measure/src/dcap/: firmware.rs  gcp.rs  gpt.rs  mod.rs  secure_boot.rs  self_hosted.rs  tdvf.rs
crates/pccs/: Cargo.toml
crates/pccs/examples/: intel_pcs.rs
crates/pccs/src/: lib.rs  mock_pcs.rs  tests.rs
crates/prove/: Cargo.toml
crates/prove/src/: azure.rs  ccel.rs  lib.rs  platform.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/verify/: Cargo.toml
crates/verify/src/: gcp.rs  lib.rs
crates/verify/src/azure/: ak_certificate.rs  ak_pubkey.rs  error.rs  mod.rs
src/: lib.rs  main.rs  types.rs
src/measure/: azure.rs  event.rs  mod.rs  uki.rs
src/measure/dcap/: gcp.rs  gpt.rs  mod.rs  self_hosted.rs  tdvf.rs
src/platform_events/: mod.rs
