[workspace]
resolver = "3"

members = [
    "crates/types",
    "crates/measure",
    "crates/prove",
    "crates/verify",
    "crates/pccs",
    "crates/cli",
]

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
manual_let_else = "warn"
match_same_arms = "warn"
uninlined_format_args = "warn"
unused_async = "warn"

[workspace.dependencies]
types = { path = "crates/types", package = "attest-types" }
measure = { path = "crates/measure", package = "attest-measure" }
prove = { path = "crates/prove", package = "attest-prove" }
verify = { path = "crates/verify", package = "attest-verify" }
pccs = { path = "crates/pccs", package = "attest-pccs" }

dcap-qvl = { git = "https://github.com/Phala-Network/dcap-qvl.git", rev = "f1dcc65371e941a7b83e3234833d23a1fb232ab1" }
tokio = { version = "1.50.0", features = ["default"] }
