[package]
name = "attest-measure"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "TEE attestation measurement: predict expected register values from images"
repository = "https://github.com/flashbots/attest"
keywords = ["attestation", "CVM", "TDX"]

[dependencies]
types = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
object = { version = "0.37", default-features = false, features = ["pe", "read"] }
authenticode = { version = "0.5.0", features = ["object", "std"] }
hex = "0.4"
hex-literal = "1"
crc32fast = "1"
ureq = "3"
rsa = "0.9"
x509-parser = { version = "0.18", features = ["verify"] }
prost = "0.14"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
