[package]
name = "attest-prove"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "TEE attestation evidence generation (DCAP TDX, Azure vTPM)"
repository = "https://github.com/flashbots/attest"
keywords = ["attestation", "CVM", "TDX"]

[dependencies]
types = { workspace = true }

thiserror = "2"
anyhow = "1"
tdx-attest = { git = "https://github.com/Dstack-TEE/dstack.git", rev = "4f602dddc0542cd34da031c90ac0b3a560f316ed" }

# Used for azure vTPM attestation generation support
az-tdx-vtpm = { version = "0.7.4", optional = true }
tss-esapi = { version = "7.6.0", optional = true }
base64 = { version = "0.22.1", optional = true }
pem-rfc7468 = { version = "0.7.0", features = ["std"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["azure"]
azure = ["az-tdx-vtpm", "tss-esapi", "base64", "pem-rfc7468", "serde", "serde_json"]

[lints]
workspace = true
